--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@ xcuserdata/
 .DS_Store
 *.xcuserstate
 *xcuserdata/joelhuber.xcuserdatad/UserInterfaceState.xcuserstate
+*xcuserdata/joelhuber.xcuserdatad/xcschemes
 /.DS_Store
 /TicTacToeSwiftUI.xcodeproj/project.xcworkspace/xcuserdata/joelhuber.xcuserdatad/UserInterfaceState.xcuserstate
+/Preview Content/*
